# multiagent-interviewer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.en.md  README.md  README.ru.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.ru.md  PROMPTING.md  PROMPTING.ru.md
examples/: README.md  README.ru.md  interview_Anatoliy_example.json
src/multiagent_interviewer/: __init__.py  cli.py  config.py  feedback.py  logging_setup.py
src/multiagent_interviewer/agents/: __init__.py  _helpers.py  expert.py  interviewer.py  manager.py
src/multiagent_interviewer/graph/: builder.py  state.py
src/multiagent_interviewer/llm/: __init__.py  client.py
src/multiagent_interviewer/prompts/: __init__.py  expert.j2  interviewer.j2  loader.py  manager.j2
src/multiagent_interviewer/rag/: __init__.py  retriever.py  system.py
tests/: test_agents.py  test_feedback.py  test_llm_client.py  test_prompts.py  test_retriever.py  test_smoke.py  test_state.py  test_system.py
