[project]
name = "multiagent-interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kirill", email = "kurill18031991@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[project.scripts]
multiagent-interviewer = "multiagent_interviewer:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
