[project]
name = "multiagent-interviewer"
version = "0.1.0"
description = "Multi-agent AI interview system with hybrid RAG"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Kirill Aleshin", email = "Nekebab@users.noreply.github.com" },
]
keywords = ["llm", "rag", "langgraph", "multi-agent", "interview"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "jinja2>=3.1",
    "tenacity>=9.0",
    "sentence-transformers>=5.4.1",
    "faiss-cpu>=1.13.2",
    "pymorphy3>=2.0.6",
    "rank-bm25>=0.2.2",
    "numpy>=2.4.4",
    "mistralai>=0.9,<1.2",
    "pandas>=3.0.2",
    "langgraph>=1.1.9",
]

[project.scripts]
multiagent-interviewer = "multiagent_interviewer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs>=3.0.0.260204",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multiagent_interviewer"]


[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["data", "docs"]

[tool.ruff.lint]
# Selected rule families:
#   E, W  — pycodestyle errors/warnings (PEP 8 compliance)
#   F     — pyflakes (unused imports, undefined names)
#   I     — isort (import ordering)
#   N     — naming conventions
#   UP    — pyupgrade (suggest modern Python syntax)
#   B     — flake8-bugbear (likely bugs and design issues)
#   SIM   — flake8-simplify (suggest simpler equivalents)
#   C4    — flake8-comprehensions
#   RUF   — ruff-specific rules
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "pymorphy3.*",
    "rank_bm25.*",
    "sentence_transformers.*",
    "mistralai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langgraph.*"]
follow_imports = "skip"
ignore_errors = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests as integration tests (need API keys)",
]


[tool.coverage.run]
core = "sysmon"
source = ["src/multiagent_interviewer"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
